This file summarizes what's changed between releases of Mail-DKIM.

{{$NEXT}}

1.20230212 2023-02-12 UTC
  + Fix typo in ARC signer example code.
    Thanks to @dev-aaront-org

1.20220520 2022-05-20 UTC
  + Change default algorithm in dkimsign.pl to sha-256
  + Use Getopt::Long::Descriptive in scripts for better command help

1.20220408 2022-04-08 UTC
  + Add support for signatures with an Expiration value

1.20200907 2020-09-07 UTC
  * ARC::Signer: Preserve leading fold from AR (if any) when copying to AAR.
    Thanks to @dev-aaront-org

1.20200824 2020-08-24 UTC
  * ARC::Signer: Set cv=none if message contains no ARC headers and no ARC result
    Thanks to @dev-aaront-org

1.20200724 2020-07-24 UTC
  * Fix test for change in live dns response

1.20200708 2020-07-08 UTC
  * Safer internal use of eval

1.20200513.1 2020-05-13 UTC
  * ARC: When sealing, don't die on an unparsable Authentication-Results header.

0.58

  2019-11-13: Marc Bradshaw <marc@marcbradshaw.net>

   Thanks to Martin Sluka <fany@cpan.org>
   * Prevent outer $SIG{__DIE__} handlers from being called

   Thanks to Todd Richmond
   * Lowercase q tag before use
   * Lowercase domain check
   * Strip quotes from PublicKey.pm in addition to other whitespace chars
   * Fix regex performance issue

0.57

  2019-10-08: Marc Bradshaw <marc@marcbradshaw.net>

   * Correct the $self->{result_reason} variable name for $self->{details} that is
     used by the parent class in Mail::DKIM::ARC::Signer

0.56

  2019-08-21: Marc Bradshaw <marc@marcbradshaw.net>

   * Properly verify the domain, not the instance, of an ARC signature.
     This allows ARC signatures by keys marked as no subdomains to
     validate correctly.

0.55

  2019-04-12: Marc Bradshaw <marc@marcbradshaw.net>

   * The authserv-id of an Authentication-Results header can contain
     CFWS, Use Mail::AuthenticationResults to parse the authserv-id
     from this field.
   * Improve parsing of authserv-id in ARC signer

0.54
